feat(email): add email template test, and cron job with wire dependency injection
